Fixed layout spacing

--- a/app/assets/stylesheets/site/_header.css.sass
+++ b/app/assets/stylesheets/site/_header.css.sass
@@ -3,6 +3,7 @@
 header[role="main"]
   .jumbotron
     position: relative
+    margin-bottom: 0
     padding-top: 82px
     padding-bottom: 82px
     min-height: 227px
