--- a/app/assets/stylesheets/site/_layout.css.sass
+++ b/app/assets/stylesheets/site/_layout.css.sass
@@ -17,17 +17,17 @@ body
   width: $container-width !important
 
 section[role="content"]
-  padding: 20px 0
+  padding: 60px 0 100px
 
 aside[role="sidebar"]
   position: relative
 
   & > .container
     padding: 0
-    width: 240px !important
+    width: 210px !important
 
     &.affix
-      top: 50px
+      top: 60px
 
   .divider
     border-top: solid 1px $gray-lighter
